<resources>
    <string name="app_name" translatable="false">CapstoneProject</string>
    <string name="title_favorite">Favorite</string>
    <string name="my_name">Samsul-Arip</string>
    <string name="my_nickname">Hello Dicoding</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="github">Github</string>
    <string name="search_username_github_here">Search username github here...</string>
    <string name="list_user">List User</string>
    <string name="pencarian_tidak_boleh_kosong">Searching do not empty!</string>
    <string name="language_settings">Language Settings</string>
    <string name="your_favorite">Your Favorite</string>
    <string name="detail">Detail User</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="unknown">Unknown</string>
    <string name="try_again">Try Again</string>
    <string name="something_wrong">Oops, Something wrong, please check your connection and try again</string>
    <string name="menu_favorite" translatable="false">menu favorite</string>
</resources>