<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <ImageView
        android:id="@+id/img_menu"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/github"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_menu"
        app:layout_constraintEnd_toStartOf="@+id/circleImageView"
        app:layout_constraintStart_toEndOf="@+id/img_menu"
        app:layout_constraintTop_toTopOf="@+id/img_menu" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/github_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_search"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp"
        android:imeOptions="actionSearch"
        android:hint="@string/search_username_github_here"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/img_menu"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="username"
        android:inputType="textPersonName"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/list_user"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/edt_search"
        app:layout_constraintTop_toBottomOf="@+id/edt_search" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_search"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:paddingTop="16dp"
        android:layout_marginEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:spanCount="3"
        tools:listitem="@layout/item_user" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/load_searching"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_load_searching"
        android:visibility="gone"
        />

    <include
        android:id="@+id/timeout"
        layout="@layout/connection_error"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintVertical_bias="1.0"
        />



</androidx.constraintlayout.widget.ConstraintLayout>